--- a/src/login.css
+++ b/src/login.css
@@ -1,1 +1,11 @@
+form {
+  wdith: 40vw;
+  height:40vw;
+  background-color: rgba(50, 140, 250, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+form > div { 
+}
