--- a/src/login.css
+++ b/src/login.css
@@ -1,13 +1,28 @@
-form {
-  wdith: 40vw;
-  height:40vw;
-  background-color: rgba(50, 140, 250, 0.5);
-  display: flex;
-  align-items: center;
-  justify-content: center;
+body {
+  margin: 0vw;
 }
 
-.form_layout {
+form {
+  width: 60vw;
+  height:40vw;
+  background-color: rgba(200, 200, 200, 1);
+  border-radius:1vw;
   display: flex;
-  flex-direction: row;
+  align-items: center;
+  justify-content:space-evenly;
+  position: fixed;
+  flex-direction: column;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+form > button {
+  width: 30%;
+  height:10%;
+  margin-top: 5%;
+  border-radius: 7%;
+  border:1px solid black;
+  background-color: #f0f8ff00;
+  
 }
