--- a/src/login.css
+++ b/src/login.css
@@ -23,6 +23,10 @@ form button {
   margin-top: 5%;
   border-radius: 7%;
   border:1px solid black;
-  background-color: #f0f8ff00;
-  
+  background-color: #f0f8ff00;  
+}
+
+form > div {
+  display: flex;
+  flex-direction: row;
 }
