--- a/src/login.css
+++ b/src/login.css
@@ -17,19 +17,33 @@ form {
   transform: translate(-50%, -50%);
 }
 
+form > h1 {
+  font-size: 6vw;
+  margin: 5vw 0vw 2vw 0vw;
+}
+
+.form_layout {
+  display:flex;
+  flex-direction:column;
+}
+
+.form_layout > input{
+  width:37vw;
+  height:2vw;
+}
+
 form button {
-  width: 30%;
-  height:10%;
-  margin-top: 5%;
-  border-radius: 7%;
+  width: 14vw;
+  margin-top: 2vw;
+  border-radius: 4px;
   border:1px solid black;
   background-color: #f0f8ff00;  
 }
 
-form > div {
-  height:15%;
-  width:70%;
-  display: flex;
-  flex-direction: row;
-  justify-content:space-evenly;
+form > div:nth-child(4) {
+  width:30vw;
+  margin-bottom: 4vw;
+  display:flex;
+  flex-direction:row;
+  justify-content:space-between;
 }
